rollout-service-mesh/istio/virtual-service-only-headers/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: guestbook-canary
      stableService: guestbook-stable
      steps:
      - setHeader: 
          canaryReplicas: 1 
          istio:
            routeName: unique-routing
            match:
            - headers:
                end-user:
                  exact: jason
      networking:
        istio:
          virtualService:
            name: guestbook-vsvc-with-headers
