rollout-service-mesh/istio/virtual-service-only-headers/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-canary
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: canary-demo
