rollout-service-mesh/istio/virtual-service-only-headers/stable-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: istio-rollout
