rollout-service-mesh/istio/virtual-service-only-headers/istio-vsvc-user-input.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-vsvc-only-weight
spec:
  hosts:
  - guestbook-vsvc-only-weight.com
  http:
  - name: rewrite
    match:
    - uri:
        prefix: "/test"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: guestbook-stable
  - name: primary
    route:
    - destination:
        host: guestbook-stable
